--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -1,11 +1,15 @@
+@use 'sass:math';
+
+
 .card {
     display: block;
     padding: $base-padding;
     border: $base-border-thickness solid #ddd;
     box-shadow: $base-box-shadow;
+    border-radius: math.div($base-border-radius, 4);
 
     .card-title {
-        font-size: $base-font-size;
+        font-size: $font-size-lg;
         padding-bottom: $base-padding;
         font-weight: bold;
     }
@@ -20,3 +24,6 @@
 
     }
 }
+
+@debug math.floor(2.6); //types in console the values during compiling for checking values
+@debug math.max(1px, 20px, 15px);
