--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -3,6 +3,13 @@
     .text-#{$key} {
         color: $val;
     }
+
+    .text-hover-#{$key} {
+        &:hover {
+            color: $val;
+        }
+    }
+
     .bg-#{$key} {
         background-color: $val;
     }
@@ -12,8 +19,15 @@
              //light variations
             @for $i from 1 through 9 {
                 .text-#{$key}-light-#{$i} {
-                    color: mix(white, $val, $i * 10);
+                        color: mix(white, $val, $i * 10);
                     }
+
+                .text-hover-#{$key}-light-#{$i} {
+                    &:hover {
+                        color: mix(white, $val, $i * 10);
+                    }
+                }
+                
                 .bg-#{$key}-light-#{$i} {
                     background-color: mix(white, $val, $i*10);
                 }
@@ -24,6 +38,13 @@
                 .text-#{$key}-dark-#{$i} {
                     color: mix(black, $val, $i * 10);
                 }
+
+                .text-hover-#{$key}-dark-#{$i} {
+                    &:hover {
+                        color: mix(black, $val, $i * 10);
+                    }
+                }
+
                 .bg-#{$key}-dark-#{$i} {
                     background-color: mix(black, $val, $i*10);
                 }
