--- a/scss/index.scss
+++ b/scss/index.scss
@@ -10,6 +10,7 @@
 
 //components (button, card, navbar, etc.)
 @import 'components/card';
+@import 'components/button';
 
 
 //utilities (margins, paddings, opacity)
